docs(API): fix UNKNOWN_BASE_TYPE issues
